## PLUXML 5.1.7 (sortie : 25/01/2013) ##

[+] Sitemap: ajout des hooks SitemapBegin et SitemapEnd
[+] Récupération automatique de la racine du site
[-] Suppression du paramètre racine dans le fichier de configuration parametres.xml
BUG fix #4  Gestionnaire de médias: mauvais tri ddu déroulant 'Dossier'
BUG fix #2  Notice à l'activation d'un plugin si des plugins ont été supprimés manuellement 
BUG fix #3  Thème par défaut: balise <article> en double dans le fichier du thème article-full-width.php
BUG fix #5  Thème par défaut: mauvais padding pour la balise <code>
BUG fix #8  Thème par défaut: espace en trop à la fin de 2 balises <link>
BUG fix #10 Thème par défaut: balise <html> absente
BUG fix #6  plxShow::templateCss() Pas de prise en compte de la réécriture d'url
BUG fix #9  plxShow::artCat() les catégories inactives sont listées
BUG fix #7  plxShow::pagination() Les articles avec une date de publication future sont comptabilisés dans la pagination
BUG fix #12 Warning date_default_timezone_get() sur la page d'installation
BUG fix #13 Warning date_default_timezone_get() dans les flux rss
BUG Réglage du focus sur le bouton Installer de la page d'installation

## PLUXML 5.1.7 (sortie : 25/01/2013) ##

[+] Les fichiers de parametres des plugins sont désormais stockés dans le dossier de configuration de PluXml
[+] plxShow:tagList(): gestion de la taille des tags (#tag_size)
[+) plxShow: ajout du hook plxShowTagFeed
[+] plxShow: ajout de la fontion tagFeed() : flux rss des articles pour un mot clé
[+] plxShow: ajout de la méthode artCatIds()
[+] plxShow: ajout de la méthode artActiveCatId()
[+] plxShow:pageTitle() : positionnement du titre du site en dernier pour améliorer les référencements (contribution Jos)
[+] plxShow:pagination() : suppression duplicate content entre la page1 et la page d'accueil
[+] plxShow::comMessage() : ajout parametre format (variable #com_message)
[+] plxShow::catDescription() : ajout format affichage #cat_description