@@ -796,7 +796,7 @@ class plxShow {
 	 * Si la variable $cat_id est renseignée, seulement les articles de cette catégorie seront retournés.
 	 * On tient compte si la catégorie est active
 	 *
-	 * @param	format	format du texte pour chaque article (variable: #art_id, #art_url, #art_status, #art_author, #art_title, #art_chapo, #art_content, #art_content(num), #art_date, #art_hour, #cat_list, #art_nbcoms)
+	 * @param	format	format du texte pour chaque article (variable: #art_id, #art_url, #art_status, #art_author, #art_title, #art_chapo, #art_chapo(num), #art_content, #art_content(num), #art_date, #art_hour, #cat_list, #art_nbcoms)
 	 * @param	max		nombre d'articles maximum
 	 * @param	cat_id	ids des catégories cible
 	 * @param   ending	texte à ajouter en fin de ligne
@@ -844,6 +844,9 @@ class plxShow {
  				$author = plxUtils::getValue($this->plxMotor->aUsers[$art['author']]['name']);
  				$row = str_replace('#art_author',plxUtils::strCheck($author),$row);
 				$row = str_replace('#art_title',plxUtils::strCheck($art['title']),$row);
+				$strlength = preg_match('/#art_chapo\(([0-9]+)\)/',$row,$capture) ? $capture[1] : '100';
+				$content = plxUtils::truncate($art['chapo'],$strlength,$ending,true,true);
+				$row = str_replace('#art_chapo('.$strlength.')','#art_chapo', $row);
 				$row = str_replace('#art_chapo',$art['chapo'],$row);
 				$strlength = preg_match('/#art_content\(([0-9]+)\)/',$row,$capture) ? $capture[1] : '100';
 				$content = plxUtils::truncate($art['content'],$strlength,$ending,true,true);
